# georange

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/samples/: kml_file.kml
src/georange/: main.py
src/georange/features/: spatial.py
src/georange/io/: io.py  reader.py
src/georange/io/files/: kml.py  types.py
src/georange/models/: __init__.py  geoset.py
