[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "georange_isaacgraper"
version = "0.0.1"
authors = [
    { name = "Isaac Graper", email = "isaac.graper@gmail.com" }
]
description = "A simple package that wrapper functionalities for geospatial analysis and visualization."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["geospatial", "GIS", "visualization", "analysis"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/isaacgraper/georange"
Issues = "https://github.com/isaacgraper/georange/issues"
