[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "georange"
version = "0.0.1"
description = "A simple package that wraps functionalities for geospatial analysis and visualization."
authors = ["Isaac Graper <isaac.graper@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/isaacgraper/georange"
repository = "https://github.com/isaacgraper/georange"
documentation = "https://github.com/isaacgraper/georange/tree/main/docs"
keywords = ["geospatial", "GIS", "visualization", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

packages = [{ include = "georange", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
# runtime deps
typer = "^0.19.2"
geopandas = "^1.1.1"
pandas = "^2.3.3"
shapely = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.6"
pytest = "^8.0"
pre-commit = "^3.0"
isort = "^5.0"
